tests/expectations/execution/optional_inputs_and_outputs_fail.out
Error while running execution tests:


Errors:
Error [ETYC0372164]: The input `x` has type `u64?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:72:27
     |
  72 |     transition u64_in_out(x: u64?) -> u64? {
     |                           ^^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u64?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:72:39
     |
  72 |     transition u64_in_out(x: u64?) -> u64? {
     |                                       ^^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:79:26
     |
  79 |     transition u8_in_out(x: u8?) -> u8? {
     |                          ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:79:37
     |
  79 |     transition u8_in_out(x: u8?) -> u8? {
     |                                     ^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `bool?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:86:28
     |
  86 |     transition bool_in_out(x: bool?) -> bool? {
     |                            ^^^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `bool?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:86:41
     |
  86 |     transition bool_in_out(x: bool?) -> bool? {
     |                                         ^^^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `f` has type `test.aleo/Foo?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:98:32
     |
  98 |     transition struct_optional(f: Foo?) -> Foo? {
     |                                ^^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `test.aleo/Foo?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:98:44
     |
  98 |     transition struct_optional(f: Foo?) -> Foo? {
     |                                            ^^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `arr` has type `[u8?; 2]?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:109:31
     |
 109 |     transition array_optional(arr: [u8?; 2]?) -> [u8?; 2]? {
     |                               ^^^^^^^^^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `[u8?; 2]?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:109:50
     |
 109 |     transition array_optional(arr: [u8?; 2]?) -> [u8?; 2]? {
     |                                                  ^^^^^^^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
